RESOLVED FIXED 258430
AX: Table structure broken for role grid, treegrid, table, row, gridcell, cell, and columnheader elements with display:contents
https://bugs.webkit.org/show_bug.cgi?id=258430
Summary AX: Table structure broken for role grid, treegrid, table, row, gridcell, cel...
Tyler Wilcock
Reported 2023-06-22 18:52:08 PDT
...
Attachments
Patch (19.46 KB, patch)
2023-06-22 18:57 PDT, Tyler Wilcock
no flags
Patch (21.07 KB, patch)
2023-06-22 23:16 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-06-22 18:52:20 PDT
Tyler Wilcock
Comment 2 2023-06-22 18:57:18 PDT
Tyler Wilcock
Comment 3 2023-06-22 23:16:14 PDT
chris fleizach
Comment 4 2023-06-23 10:06:02 PDT
Comment on attachment 466807 [details] Patch looks good
chris fleizach
Comment 5 2023-06-23 10:06:08 PDT
Comment on attachment 466807 [details] Patch looks good
EWS
Comment 6 2023-06-23 11:43:19 PDT
Committed 265470@main (23e7f4efeb89): <https://commits.webkit.org/265470@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466807 [details].
Note You need to log in before you can comment on or make changes to this bug.