AX: Table structure broken for role grid, treegrid, table, row, gridcell, cell, and columnheader elements with display:contents https://bugs.webkit.org/show_bug.cgi?id=258430 rdar://problem/111193901

Reviewed by Chris Fleizach.

With this patch, we now create the appropriate subclass for node-only objects (like those with display:contents) with roles equal to
grid, treegrid, table, row, gridcell, cell, and columnheader. This enables the table structure to be built correctly in
AccessibilityTable::addChildren (and represented accurately in various other places that do class type-checking for these table / grid types).

* LayoutTests/accessibility/display-contents/aria-grid-expected.txt: Added.
* LayoutTests/accessibility/display-contents/aria-grid.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::isAccessibilityARIAGrid):
(WebCore::isAccessibilityARIAGridRow):
(WebCore::isAccessibilityARIAGridCell):
(WebCore::AXObjectCache::createObjectFromRenderer):
(WebCore::createFromNode):
* Source/WebCore/accessibility/AccessibilityARIAGrid.cpp:
(WebCore::AccessibilityARIAGrid::AccessibilityARIAGrid):
(WebCore::AccessibilityARIAGrid::create):
* Source/WebCore/accessibility/AccessibilityARIAGrid.h:
* Source/WebCore/accessibility/AccessibilityARIAGridCell.cpp:
(WebCore::AccessibilityARIAGridCell::AccessibilityARIAGridCell):
(WebCore::AccessibilityARIAGridCell::create):
(WebCore::AccessibilityARIAGridCell::readOnlyValue const):
(WebCore::AccessibilityARIAGridCell::parentRowGroup const): Deleted.
* Source/WebCore/accessibility/AccessibilityARIAGridCell.h:
* Source/WebCore/accessibility/AccessibilityARIAGridRow.cpp:
(WebCore::AccessibilityARIAGridRow::AccessibilityARIAGridRow):
(WebCore::AccessibilityARIAGridRow::create):
* Source/WebCore/accessibility/AccessibilityARIAGridRow.h:

Canonical link: https://commits.webkit.org/265470@main